Fixed introduction and appendix

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,22 @@
 \newpage
+
 \chapter{Code of \emph{SigmaPie}}
+
+This appendix lists the full Python code for the package \emph{SigmaPie} that was used in the experiments reported in Chapters 3 and 4.
+However, note, that future versions may yield different results.
+The most recent version of \emph{SigmaPie} can be installed
+via \texttt{pip} and is also available on GitHub:
+
+\begin{center}
+\href{https://pypi.org/project/SigmaPie/}{\texttt{https://pypi.org/project/SigmaPie/}}
+\end{center}
+
+The Github repository also contains additional documentation on how to use \emph{SigmaPie}.
+The code of the experiments themselves is available on GitHub as well:
+
+\begin{center}
+\href{https://github.com/alenaks/subregular-experiments}{\texttt{https://github.com/alenaks/subregular-experiments}}
+\end{center}
 
 \section{Grammar class}
 
