--- a/languages.tex
+++ b/languages.tex
@@ -1391,6 +1391,7 @@ The long-distant nature of the SP generalizations makes it impossible for them t
 
 
 \section{Tier-based strictly local models}
+\label{TSLresultssection}
 
 Previous sections discussed strictly local and strictly piecewise languages.
 The first ones were \emph{only} able to model local dependencies, whereas the latter ones \emph{only} expressed the long-distance ones, without the ability to be sensitive to intervening material.
