--- a/aksbib.bib
+++ b/aksbib.bib
@@ -423,6 +423,19 @@
   address = {Cambridge, England}
 }
 
+
+@article{Culy1985,
+  author = {Christopher Culy},
+  title = {The complexity of the vocabulary of {B}ambara},
+  year = {1985},
+  journal = {Linguistics and Philosophy},
+  volume = {8},
+  number = {},
+  pages = {345--351}
+}
+
+
+
 @book{DeLaHiguera2010,
  author = {de la Higuera, Colin},
  title = {Grammatical Inference: Learning Automata and Grammars},
@@ -1050,6 +1063,18 @@ using Finite-State Transducers},
   title={Vowel harmony in {K}halkha and {B}uriat ({E}ast {M}ongolian)},
   journal = {Linguistics in the Netherlands},
   pages ={81-89}
+}
+
+
+@incollection{Huybregts1984,
+  address = {Dordrecht, Netherlands},
+  author = {Marinus A. C. Huybregts},
+  booktitle = {Van periferie naar kern},
+  editor = {Ger J. de Haan, Mieke Trommelen, Wim Zonneveld},
+  pages = {81--99},
+  publisher = {Foris Publications},
+  title = {The weak adequacy of context-free phrase structure grammar},
+  year = {1984}
 }
 
 
