--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,1 +1,72 @@
-\emph{to be added}
+{\small 
+For a fun virtual defense, I am grateful to my dissertation committee: Thomas Graf, Mark Aronoff, Jeff Heinz, and Richard Sproat.
+Your words of wisdom, comments, and support are precious to me.
+A very special thank you I owe to Thomas Graf who was my guide and mentor these five years.
+Without your input, I would not be able to make it to this moment.
+This route was not easy, but you were always able to understand me and give helpful advice or a good idea, directly and indirectly.
+Even when everything seemed worthless, just as many things seem to be worthless when they are difficult, you helped me to keep going.
+
+
+John Bailyn, without you, I would not be here at Stony Brook.
+Only after attending your summer schools in Saint Petersburg, I realized that doing research is not an unbearably fastidious activity, but rather a curious journey.
+Sometime in 2014, you told me "Hey, you should apply to SBU.
+We have a new faculty member, Thomas Graf, and you guys might want to work together."
+Although I had not considered applying to Ph.D. before, it somehow sounded like a good idea.
+Since then, you were always there for me.
+
+I would never get to know about John Bailyn's summer school without Ekaterina Anatolyevna Lyutikova, my advisor at Moscow State University, and Sergei Georgievich (SG) Tatevosov, our fieldwork boss.
+SG once said, "Ph.D. is the right choice that you will frequently regret."
+Well, now I know what you meant, and thank you for inspiring me to accept this challenge.
+I am grateful for all those breathtaking fieldwork trips, that were an unlimited source of material for stories and memories ranging from wild and bizarre to inspiring and life-changing.
+Many times I dreamed of staying in those places.
+
+Ph.D. initially felt like a fieldwork experience in better living conditions.
+Luckily, this time, I could stay.
+SBU linguistic department is indeed a very unique place, where distinguished professors bake the best banana bread, invited speakers show how to Slav squat, and there is frequently an after-party after colloquium receptions, all while doing superb research.
+Mark Aronoff, apart from that damn good banana bread, thank you for your wisdom and the ability to share it in a tasteful and fun way.
+Lori Repetti, your kindness, ability to explain, and sense of style is something that keeps fascinating and inspiring me.
+Bob Hoberman, every meeting we had was twice as long as we expected, because there were just too many exciting things in the world that we needed to discuss, and we could not stop.
+Jeff Heinz, you were always there to help and give a piece of sought-for advice, be it life or research.
+Andrei Antonenko, you keep blowing my mind with your talents, that go way beyond contagiously energetic teaching and cooking the best steak in the world.
+Sandra and Michelle, our department would never work the way it does without you.
+Thank you, dear SBU faculty and staff.
+
+During these years, I met some of the brightest people.
+Aniello De Santo, we started and ended our Ph.D. journeys at the same time, had the same adviser, and even stayed in the same house all this time.
+This was a challenge by itself, considering how different we are, but we managed to make the best out of it and became close friends.
+I will miss our evening chats about everything, from silly rumors to the meaning of life, and our anxious pre-defense baking.
+The only other person who stayed these whole five years with us in the same house was Sanket Deshmukh.
+Sanket, we talked these years non-stop, solved coding challenges together, and I still remember you explaining to me the eight queens puzzle in the basement after drinking the amount of wine that I should not mention in the acknowledgments section of my dissertation.
+Thank you for helping me grow.
+Ayla Karaka\c{s}, thank you for having my back when even I didn't have it.
+I will always remember how we were jumping high at ASOT and Dreamstate, and even higher when you got into Yale's Ph.D. program.
+Good luck, bro.
+Sophie Moradi, you were always there for me, helping the sun to shine even when it was getting dark.
+Hongchen Wu, you are a wonderful example that one can be caring, hard-working, and goofy at the same time.
+Nazila Shafiei, thank you for the constant ability to make people around you feel better, it is definitely your talent.
+Thank you, Hossep Dolatian, for finding the best in any situation, and for your endless willingness to help.
+Jon Rawski, thank you for always having a fun story to share.
+No one knows food and drink places in any city of the world better than Chikako Takahashi.
+Unfortunately, I need to start wrapping this section up, but I cannot do so without mentioning Sagnik Das, Darius Coelho, Ji Yea Kim, Alex Yeung, Andrija Petrovic, SeoYoung Kim, Ali Salehi, Yaobin Liu, Hyunah Baek, Varya Magomedova, Chong Zhang, Rob Pasternak, So Young Lee, Veronica Miatto, Russell Tanenbaum, Anya Melnikova, Grace Wivell, Kalina Kostyszyn, Lei Liu, Mohammad Alobaid, Arghya Bhattacharya, Ritika Nevatia, Cheryl Condon, Rahaf Bakhtawer, and Aline Teixeira.
+
+Outside of SBU, I was lucky to be surrounded by gems as well.
+Alex Savina, we got to know each other even before going to school, and were together ever since then.
+Marina Ermolaeva, thank you for being my friend and the best travel buddy I can imagine.
+We hitchhiked in Armenia, literally invited troubles in Georgia, and did a lot of reckless things in Berlin.
+I enjoyed them all.
+Nastya Ivanova, ptenz, you are a very special one.
+We went together through so much, and I still remember the comfort of your couch that was to me like home.
+For fantastic memories and conversations, I am grateful to Masha Borodavchenko, Julia Trishankova, Nastya Serebryannikova, Amanda Ritchart-Scott, Kyle Gorman, Kevin McMullin, Charles Reiss, Mati Pentus, Maxime Papillon, Dionysia Saratsli, Ildi Szab\'o, Felix Keppler, Abhishek De, Kabilan Ramkumar, Borya Danilin, Ozer Kelgembaitegin, Zula Artykbaev, and Katie DeAngelis.
+
+The final words of thank you go to my family.
+Henrick Goldwurm, thank you for making these years happy.
+Thank you for your ability to come up with simple solutions to complex problems, showing me perspectives I did not see before, and at times, understanding me better than I could.
+We made it.
+Glasha Aks\"{e}nova and Venya Smekhov, thank you for being my exceptionally cool aunt and uncle.
+Finally, I want to thank my parents, Evgeny Aks\"{e}nov and Maria Tendryakova.
+My father is the person who taught me to keep going no matter how challenging it gets.
+Life was not kind enough to let him stay longer, but I know how happy he would be looking at this dissertation.
+Mom, you always say that you don't know what is right, but you know what is wrong.
+Thank you for helping me navigate through the world with tons of very attractive wrong decisions, and thank you for learning to be my friend.
+This dissertation is dedicated to you guys.
+}
