--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -9,13 +9,13 @@ Even when everything seemed worthless, just as many things seem to be worthless 
 
 John Bailyn, without you, I would not be here at Stony Brook.
 Only after attending your summer schools in Saint Petersburg, I realized that doing research is not an unbearably fastidious activity, but rather a curious journey.
-Sometime in 2014, you told me "Hey, you should apply to SBU.
-We have a new faculty member, Thomas Graf, and you guys might want to work together."
+Sometime in 2014, you told me ``Hey, you should apply to SBU.
+We have a new faculty member, Thomas Graf, and you guys might want to work together.''
 Although I had not considered applying to Ph.D. before, it somehow sounded like a good idea.
 Since then, you were always there for me.
 
 I would never get to know about John Bailyn's summer school without Ekaterina Anatolyevna Lyutikova, my advisor at Moscow State University, and Sergei Georgievich (SG) Tatevosov, our fieldwork boss.
-SG once said, "Ph.D. is the right choice that you will frequently regret."
+SG once said, ``Ph.D. is the right choice that you will frequently regret.''
 Well, now I know what you meant, and thank you for inspiring me to accept this challenge.
 I am grateful for all those breathtaking fieldwork trips, that were an unlimited source of material for stories and memories ranging from wild and bizarre to inspiring and life-changing.
 Many times I dreamed of staying in those places.
